--- a/en/activation/_posts/2015-07-20-cones.md
+++ b/en/activation/_posts/2015-07-20-cones.md
@@ -3,7 +3,7 @@ title: "Cones"
 layout: article
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/0pF-TkX9TvLjKk9hW4SPNQewXfP-Rr9Zq6x1Zx0xUh0=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAITPhZ8dtNTIshBPC3HnFUa/aktivointi/totterot/DSC40250-245px.jpg
   thumb:
 ---
 
@@ -17,28 +17,28 @@ Later on I made double cones using paper cups, plastic cups and Classic Kong toy
 
 ---
 
-[![](https://lh3.googleusercontent.com/7FRpvZKfA2FZdEZpDv8JTKGYhmnbMw8vGgiWCwndYlQ=w800)](https://lh3.googleusercontent.com/7FRpvZKfA2FZdEZpDv8JTKGYhmnbMw8vGgiWCwndYlQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC-rSWKBeEy8iMbiQEiKZCma/aktivointi/totterot/DSC40250-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACFmkjiazMrap1gV7AZPXJoa/aktivointi/totterot/DSC40250.jpg)
 
-[![](https://lh3.googleusercontent.com/XwJXQg-Q-H-ldSuLpBABDWAgtKnzeP5MSbk1ANlsd-Y=w800)](https://lh3.googleusercontent.com/XwJXQg-Q-H-ldSuLpBABDWAgtKnzeP5MSbk1ANlsd-Y=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABEGiCL4j0Iud8IR0O72Joxa/aktivointi/totterot/DSC40321-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADce8ADTg4tZTiYq91g28YXa/aktivointi/totterot/DSC40321.jpg)
 
-[![](https://lh3.googleusercontent.com/S82jh2dBKF_nPDG7H_VFvDTEoW0PLfE4n-5bz9plBCM=w800)](https://lh3.googleusercontent.com/S82jh2dBKF_nPDG7H_VFvDTEoW0PLfE4n-5bz9plBCM=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABB6MP0YIw8VK5eX02246Lfa/aktivointi/totterot/DSC40349-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADpMQonIdl24cbLgUGQZaEoa/aktivointi/totterot/DSC40349.jpg)
 
-[![](https://lh3.googleusercontent.com/1lZQpFjD--0hK-X3vOjcbM9zBlP3mAA0KjpgBcixj-A=w800)](https://lh3.googleusercontent.com/1lZQpFjD--0hK-X3vOjcbM9zBlP3mAA0KjpgBcixj-A=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAYtM5rBx97u79dkgtQtVfTa/aktivointi/totterot/DSC40372-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADyuoGmgEI-KqtbZHonmWoDa/aktivointi/totterot/DSC40372.jpg)
 
-[![](https://lh3.googleusercontent.com/hrFKBRy0jH8rxa0oAnqmTC4RRnmCkHe4BG_2QjUZxiU=w800)](https://lh3.googleusercontent.com/hrFKBRy0jH8rxa0oAnqmTC4RRnmCkHe4BG_2QjUZxiU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAXEd8sNpLYoGdkj0jAVvy_a/aktivointi/totterot/DSC40383-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACQdzycyXJfjDHd5o-iF1e7a/aktivointi/totterot/DSC40383.jpg)
 
-[![](https://lh3.googleusercontent.com/8Dr3zuiPFQSOOQAnPe7nA7C5jLcvAWY5_Bzb4ozEIuE=w800)](https://lh3.googleusercontent.com/8Dr3zuiPFQSOOQAnPe7nA7C5jLcvAWY5_Bzb4ozEIuE=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADX11MbRLkzR31rpiTdfjIaa/aktivointi/totterot/DSC40415-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABSNSq94lBWOrav3_pYWE0La/aktivointi/totterot/DSC40415.jpg)
 
-[![](https://lh3.googleusercontent.com/NoIZgsXKMTkPru2UPQEGBrn8aktNuCjbGneDBcvYvdQ=w800)](https://lh3.googleusercontent.com/NoIZgsXKMTkPru2UPQEGBrn8aktNuCjbGneDBcvYvdQ=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHz-j7KQxzPAnc36PHmMHWa/aktivointi/totterot/DSC40396-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADsDjVxbPb0OfqIonzrbHSba/aktivointi/totterot/DSC40396.jpg)
 
-[![](https://lh3.googleusercontent.com/SVLHUGEDOFWMHedvVnBKvE_5VmjWv_lq0xEPL2cv2HA=w800)](https://lh3.googleusercontent.com/SVLHUGEDOFWMHedvVnBKvE_5VmjWv_lq0xEPL2cv2HA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACnPX-Cys1B7c7Oh4dNgwU2a/aktivointi/totterot/DSC40449-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACjGDxDwBay0jGjewvefsHFa/aktivointi/totterot/DSC40449.jpg)
 
-[![](https://lh3.googleusercontent.com/hnjgvbw1z6SJqszOMAQsOlNhLkmTUuuziIG1ommzhKyXNov7dq2VDeeBrsCs-Pto0gincoqhjaLvPdyVu1h-1FCioVYsAJKtzGye8oU1avK2G2Egv1Sh-I6HpjC0Aae7yZ6EfNaZBtuKeQ6Zw20y3_0gjpcRu1z-HV4M7obda5XqQLhNbtomhTYosq6YlF1zqENa23IqQ96BX8D-ANtYGpnG_oFJtAFh1XQbwUJa0i2umecENQ56W4J1dQmiPyiwaSEULimxV9NHJrfF5HgU6g6JMdNkU2JOUSi_isq2EfNhmwfb2Gky8mJF5O9z07So48vhGgVoR64Q0KYtqU8UrCfkrZJaXGo-yODr3w3QwxIFGK39lzvCt8DWJY3_roDBw76Rk6dSvpJS9D-8beeXDpLKmFvDkRHLnw-_u1r0axs1Gf_Q9IYN5bhad9IYK8xxwWB3KjMhb_4myGXSPdIbSkh6WkU7nkMwDZJ79H95o8eTkQhU1rzi9aaa9kYWV3ptmY8gBfy4xirlImHEKuNf3hC1Ta5-BcPMishGwF8qbng=w800)](https://lh3.googleusercontent.com/hnjgvbw1z6SJqszOMAQsOlNhLkmTUuuziIG1ommzhKyXNov7dq2VDeeBrsCs-Pto0gincoqhjaLvPdyVu1h-1FCioVYsAJKtzGye8oU1avK2G2Egv1Sh-I6HpjC0Aae7yZ6EfNaZBtuKeQ6Zw20y3_0gjpcRu1z-HV4M7obda5XqQLhNbtomhTYosq6YlF1zqENa23IqQ96BX8D-ANtYGpnG_oFJtAFh1XQbwUJa0i2umecENQ56W4J1dQmiPyiwaSEULimxV9NHJrfF5HgU6g6JMdNkU2JOUSi_isq2EfNhmwfb2Gky8mJF5O9z07So48vhGgVoR64Q0KYtqU8UrCfkrZJaXGo-yODr3w3QwxIFGK39lzvCt8DWJY3_roDBw76Rk6dSvpJS9D-8beeXDpLKmFvDkRHLnw-_u1r0axs1Gf_Q9IYN5bhad9IYK8xxwWB3KjMhb_4myGXSPdIbSkh6WkU7nkMwDZJ79H95o8eTkQhU1rzi9aaa9kYWV3ptmY8gBfy4xirlImHEKuNf3hC1Ta5-BcPMishGwF8qbng=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA3nIUjp_AtghCwS14ITTrea/aktivointi/totterot/DSC48212-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAEN6oqcEdnlYa3yv-rWuM1a/aktivointi/totterot/DSC48212.jpg)
 
-[![](https://lh3.googleusercontent.com/DUWyMzDQf_1eaxVivZtyqCd4-HhTs8YxCayIey7uWLDZHKDu_vjvSKEtiBbM0Ll5Q9zSKHjEKINNVKYSBBI5uWzQkPtxjPlQRSq9Bce6ceApTc0x8pug4edfgl9J6jVQSW3_Eh4XlNIeF0Ve6GR9Qe6G1xbZTHtnGkRcU8VVC8HHAP7RZLMaK_B7xVQdKPa8K1oP2btNEfZtOb6EDTRHpbIn6CdvWkNA-c5L5SzpixkCOaT0MMqFXKDOZnaL9YIBaQHZfVXSJgZB0CIIWW4eH2Apt_aG5yyaXG2bFz-Qi2odY3hj_aSw9UkLnlY447DicNLi-bwOUGtccPe-cJrEqBrpTKRgUzfEGI-kh2iESyYjLlh8dAqJ_D_JdCiJFST_aPRXfrVAeuq51ZBWSlzCW0-No_NTUYnzrCzGhu_w0MjPdSgi29MN8F6Q8xyW5YCzMJGNBe6uHYLsG2ZEiivg40cfLKAS58s5bIj5LNnx4wZ9hnFENM_d9N_vtf4C7d0RUx8H9guakNSOugQ_OMqu6BB6FEkQUIXL1LgDO_hMn8U=w800)](https://lh3.googleusercontent.com/DUWyMzDQf_1eaxVivZtyqCd4-HhTs8YxCayIey7uWLDZHKDu_vjvSKEtiBbM0Ll5Q9zSKHjEKINNVKYSBBI5uWzQkPtxjPlQRSq9Bce6ceApTc0x8pug4edfgl9J6jVQSW3_Eh4XlNIeF0Ve6GR9Qe6G1xbZTHtnGkRcU8VVC8HHAP7RZLMaK_B7xVQdKPa8K1oP2btNEfZtOb6EDTRHpbIn6CdvWkNA-c5L5SzpixkCOaT0MMqFXKDOZnaL9YIBaQHZfVXSJgZB0CIIWW4eH2Apt_aG5yyaXG2bFz-Qi2odY3hj_aSw9UkLnlY447DicNLi-bwOUGtccPe-cJrEqBrpTKRgUzfEGI-kh2iESyYjLlh8dAqJ_D_JdCiJFST_aPRXfrVAeuq51ZBWSlzCW0-No_NTUYnzrCzGhu_w0MjPdSgi29MN8F6Q8xyW5YCzMJGNBe6uHYLsG2ZEiivg40cfLKAS58s5bIj5LNnx4wZ9hnFENM_d9N_vtf4C7d0RUx8H9guakNSOugQ_OMqu6BB6FEkQUIXL1LgDO_hMn8U=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA61vtmzMBApPcFQsRHdUjZa/aktivointi/totterot/DSC48248-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAChba0Uoj9pL1cwPawVODyCa/aktivointi/totterot/DSC48248.jpg)
 
-[![](https://lh3.googleusercontent.com/buuJCHe4EddVm7ZpGoLKHa4Hbs8EKu2C3F9MSQ3NClaTUWA63kLziLWr4W4uTe5zPtIr-DOanSdvt4TsbZHSo32iHXsG3JecjZDn5uBNPG4TIkUFtWrmr_qV8fxNqRJaLEwcEohry7lROUHNBPGcqzIlm25ZfLTzKDA79sAsPrJ6wmE8vZT4eWI60jsba1KTcG2y9HLcHj1joSeU1GowmqW0a3zIurmzIjmxidfoaNQVw2ymb1BB6lCEzThZQuQmfbYOXK3DTmif-AbDUmLM7uAV3NPdIseEeyHxOMZ7pIobnlJjVM2R8S8wee7J9V5_sMfnQDbSVp6T7nioTFo-YzSOIFRL0pzMf0Rm7UWIa1U_wdno9YuoUv0uiyui9vhbNrks0MFO5wy0N-XRIuUllrzO5RwpEfRbDzOJNVYYeu2UR6i0HDbBak0C3vuMYSRUFTxLzNDuQVOxyW0iNEuYQI9K_JOaBsfiO0bPVeMcV9x5rYWORRdHiZyoRmXvPmFvN1HSEAp9V_lW5i4noYw7dv01e0ieziyF6LBjlaAQmUs=w800)](https://lh3.googleusercontent.com/buuJCHe4EddVm7ZpGoLKHa4Hbs8EKu2C3F9MSQ3NClaTUWA63kLziLWr4W4uTe5zPtIr-DOanSdvt4TsbZHSo32iHXsG3JecjZDn5uBNPG4TIkUFtWrmr_qV8fxNqRJaLEwcEohry7lROUHNBPGcqzIlm25ZfLTzKDA79sAsPrJ6wmE8vZT4eWI60jsba1KTcG2y9HLcHj1joSeU1GowmqW0a3zIurmzIjmxidfoaNQVw2ymb1BB6lCEzThZQuQmfbYOXK3DTmif-AbDUmLM7uAV3NPdIseEeyHxOMZ7pIobnlJjVM2R8S8wee7J9V5_sMfnQDbSVp6T7nioTFo-YzSOIFRL0pzMf0Rm7UWIa1U_wdno9YuoUv0uiyui9vhbNrks0MFO5wy0N-XRIuUllrzO5RwpEfRbDzOJNVYYeu2UR6i0HDbBak0C3vuMYSRUFTxLzNDuQVOxyW0iNEuYQI9K_JOaBsfiO0bPVeMcV9x5rYWORRdHiZyoRmXvPmFvN1HSEAp9V_lW5i4noYw7dv01e0ieziyF6LBjlaAQmUs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACNKXtPhJ7-wZbe4rfa0NF-a/aktivointi/totterot/DSC48243-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABi_pgmOiJSElpyNldv6OSia/aktivointi/totterot/DSC48243.jpg)
 
-[![](https://lh3.googleusercontent.com/89kVogGwKhegoGRvOL2ckrw9WxmyA7kpaF4lnbq7E70E1v-ovZQtVjJmjg2sQm7ecuGxGHTM6T_ZOXPoDzESEybC-dF6O0edTk3F1s-qF38zifppt9bDIlqM3X0ZzThwUj_kAATXg4A5adChqDSqvpmH0pUoeYAyoTCbBDhY2xILc4wN5YXGBDNDWONXgztSoriU9NJDN1P_e1F_OBRLNLa8d5r4e9swuvc8CFVgUSaybtuVFtrqDtaNENjxHNioEukGqBwUHodowYBFKUCiPRVBYoZ_iS2iYLS1RRc8DITH80fXzDMkHWOD_m9edrbaLnBPxK8avxvis4DBr5L5knBXNy8KPTpsEedl20C5NpGfBICvBIJKtkHVCJIi5Cp-TARbaW6yG-dBYG_ziCwwQoQtzJr2pv7jQraYsJaAPhyX67ZZJCJrUu_6hpwaoYUlG_zRYS5imqoo4V_lSC6qDY6R6ktoL_JkvcRf-jZHwIFox1Bl7fJBb0x6PPVQumWsOi2_3VZpnR0df0AKGKjJClstSks55-iT0O65qSu9LMs=w800)](https://lh3.googleusercontent.com/89kVogGwKhegoGRvOL2ckrw9WxmyA7kpaF4lnbq7E70E1v-ovZQtVjJmjg2sQm7ecuGxGHTM6T_ZOXPoDzESEybC-dF6O0edTk3F1s-qF38zifppt9bDIlqM3X0ZzThwUj_kAATXg4A5adChqDSqvpmH0pUoeYAyoTCbBDhY2xILc4wN5YXGBDNDWONXgztSoriU9NJDN1P_e1F_OBRLNLa8d5r4e9swuvc8CFVgUSaybtuVFtrqDtaNENjxHNioEukGqBwUHodowYBFKUCiPRVBYoZ_iS2iYLS1RRc8DITH80fXzDMkHWOD_m9edrbaLnBPxK8avxvis4DBr5L5knBXNy8KPTpsEedl20C5NpGfBICvBIJKtkHVCJIi5Cp-TARbaW6yG-dBYG_ziCwwQoQtzJr2pv7jQraYsJaAPhyX67ZZJCJrUu_6hpwaoYUlG_zRYS5imqoo4V_lSC6qDY6R6ktoL_JkvcRf-jZHwIFox1Bl7fJBb0x6PPVQumWsOi2_3VZpnR0df0AKGKjJClstSks55-iT0O65qSu9LMs=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACt3Pe_yZ-SnS4eZvnyDLBwa/aktivointi/totterot/DSC56887-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAvhevU6gB4FyaxhUIOoq-fa/aktivointi/totterot/DSC56887.jpg)
 
-[![](https://lh3.googleusercontent.com/R_zEmJLMvAqSjI7vuCPSv1RL28l6N194sutUao6cI_P7_6SB6Nx37OKDJtg1Tk89z4oaGRzXExwtPapL6tLuWC747Mdh6w7e9Z1F9KaQTwzIgb8mVZ2fz2zcHF1-ua6aN_v-UVR95AJ35Pzlyi2girVWcYT9BJd9uhRFMOoD9xytT8lBYAJjLin4Vo1CEKT4K5K98Uibn24yby9MLXi0VdZzl5vF0qrJBIIFiGuaXAnXlDKfOB9BZ783k5zSQuy71HwCobaA6DF9thdwDzWdcLt4bd8xZolORDUQpFNCbvkQIIAUKU6v5Gvr0z2OLnv1MRc19N0V986kBlbIZye6sUNVeQhM10WGnFfVSHtsjnM3x5ZZ2jsU-LxtBUhaRLxHST12Toy__7TLgVET2CLxZF_g-vMVfSDHRMipV2MAVIJ_HRXs201d24eXZejARAZAt2Dj72q8BupcVKukO0ApnbfDMa3ESYH3Y1hWrey6IiL_rkMGOrBnxF2KgfRDPIQbfQTo_aXNTjbQPR2fGrkkEdo1ZMX2fRAiHrIJjm4hJLo=w800)](https://lh3.googleusercontent.com/R_zEmJLMvAqSjI7vuCPSv1RL28l6N194sutUao6cI_P7_6SB6Nx37OKDJtg1Tk89z4oaGRzXExwtPapL6tLuWC747Mdh6w7e9Z1F9KaQTwzIgb8mVZ2fz2zcHF1-ua6aN_v-UVR95AJ35Pzlyi2girVWcYT9BJd9uhRFMOoD9xytT8lBYAJjLin4Vo1CEKT4K5K98Uibn24yby9MLXi0VdZzl5vF0qrJBIIFiGuaXAnXlDKfOB9BZ783k5zSQuy71HwCobaA6DF9thdwDzWdcLt4bd8xZolORDUQpFNCbvkQIIAUKU6v5Gvr0z2OLnv1MRc19N0V986kBlbIZye6sUNVeQhM10WGnFfVSHtsjnM3x5ZZ2jsU-LxtBUhaRLxHST12Toy__7TLgVET2CLxZF_g-vMVfSDHRMipV2MAVIJ_HRXs201d24eXZejARAZAt2Dj72q8BupcVKukO0ApnbfDMa3ESYH3Y1hWrey6IiL_rkMGOrBnxF2KgfRDPIQbfQTo_aXNTjbQPR2fGrkkEdo1ZMX2fRAiHrIJjm4hJLo=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAOnTIL_FRG63z2lOhYG2yWa/aktivointi/totterot/DSC56874-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABa1JImqdIEoE16UFz0Ch-8a/aktivointi/totterot/DSC56874.jpg)
